--- a/imageletter/build.gradle
+++ b/imageletter/build.gradle
@@ -26,5 +26,5 @@ configurations{
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'androidx.appcompat:appcompat:1.0.0'
 }
